chapitres/15/middleware-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mailhog-auth-traefik
spec:
  basicAuth:
    removeHeader: true
    secret: mailhog-secret
