chapitres/15/ingress-nginx-annotation.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailhog-traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: mailhog-secret
spec:
  rules:
  - host: "mailhog-traefik.eni.yannig.ovh"
    http:
      paths:
      - path: /
        backend:
          serviceName: mailhog
          servicePort: 8025
  tls:
    - secretName: eni-yannig-ovh-prod-tls
