chapitres/15/ingress-nginx-annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-auth
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: mailpit-secret
    # message to display why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "mailpit authentication"
spec:
  ingressClassName: nginx
  rules:
  - host: "mailpit-auth.eni.yannig.ovh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailpit
            port:
              number: 8025
  tls:
    - secretName: eni-yannig-ovh-prod-tls
