chapitres/15/ingress-traefik-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-auth-traefik
  annotations:
    # reference previous objet defined (prefix: <NAMESPACE>-<MIDDLEWARE_NAME>)
    traefik.ingress.kubernetes.io/router.middlewares: >-
      default-mailpit-auth-traefik@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: "mailpit-auth-traefik.eni.yannig.ovh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailpit
            port:
              number: 8025
  tls:
    - secretName: eni-yannig-ovh-prod-tls
