chapitres/15/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-traefik
spec:
  ingressClassName: traefik
  rules:
  - host: "mailpit-traefik.eni.yannig.ovh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailpit
            port:
              number: 8025
